[project]
name = "comfyui-autobatchrunner"
version = "0.0.1"
description = "Adds an Auto-Batch Runner UI to ComfyUI: numeric input for run count, start/stop UI, hotkeys, and intervaled auto-run."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Boba-svg" }
]
keywords = ["ComfyUI", "batch", "automation", "UI"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: UI Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/Boba-svg/ComfyUI_AutoBatchRunner"
"Repository" = "https://github.com/Boba-svg/ComfyUI_AutoBatchRunner"
"Bug Tracker" = "https://github.com/Boba-svg/ComfyUI_AutoBatchRunner/issues"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
# 他に必要な依存ライブラリがあれば以下に追加
# e.g. comfyui = "^x.y"
# e.g. some-ui-package = "^a.b"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
mypy = "^1.0"
# 必要に応じて lint ツール等追加

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
