[build-system]
# ビルドに使用するバックエンドを指定（ここでは標準的な setuptools を使用）
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# プロジェクトの基本的なメタデータ
name = "ComfyUI_AutoBatchRunner"
# バージョンはプロジェクトに合わせて適宜変更してください
version = "1.0.0" 
description = "Automatically run batches of workflows in ComfyUI."
readme = "README.md"
authors = [
    {name = "Boba-svg"}, # GitHubの作者名を使用
]
license = {file = "LICENSE"} # LICENSEファイルがあれば
requires-python = ">=3.10" # ComfyUIが要求するPythonバージョンに合わせて調整

# プロジェクトの依存関係 (ComfyUIカスタムノードとして通常は最小限で済みます)
dependencies = [
    "requests", # 必要に応じて、依存するライブラリを追加
    # 例: "numpy>=1.20"
]

# PyPIでの分類
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License", # 適切なライセンスを選択
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Boba-svg/ComfyUI_AutoBatchRunner"
Repository = "https://github.com/Boba-svg/ComfyUI_AutoBatchRunner"
