[project]
# プロジェクトの基本的なメタデータ リネーム

name = "ComfyUI-AutoBatchRunner" 
# バージョンはプロジェクトに合わせて適宜変更してください

version = "1.0.8" 

description = "This script adds an automatic batch runner UI to ComfyUI. The underscore in ComfyUI_AutoBatchRunner is a naming error. Please use ComfyUI-AutoBatchRunner."

requires-python = ">=3.10" # ComfyUIが要求するPythonバージョンに合わせて調整

authors = [
    {name = "Boba-svg"}, # GitHubの作者名を使用
]

# 必須: ライセンス。あなたのリポジトリはMITライセンスなので、そのように指定します。
license = { text = "MIT" } 

[project.urls]
Repository = "https://github.com/Boba-svg/ComfyUI-AutoBatchRunner"

# ----------------------------------------------------
# [tool.comfy] セクション
# ComfyUI Managerのための固有の設定です。
[tool.comfy]

# 必須: あなたのGitHubユーザー名またはユニークな識別子。
# Managerはこれを使ってノードの場所を特定します。
PublisherId = "boba-svg" 

# 推奨: Managerのリストに表示される、ユーザーフレンドリーな名前。
# 日本語でも構いませんが、英字名が推奨されます。
DisplayName = "ComfyUI-AutoBatchRunner" 

# (オプション) ノードが特定のサブディレクトリにある場合に指定します。
# 通常はルートにあるため、不要です。
# Root = "."
